# ai-codeforge

./: .gitignore  ACTIVE_FILES.md  AGENT_ENHANCEMENT_STRATEGY.md  AUTONOMOUS_OPERATIONS_VISION.md  CHANGELOG.md  COMPLETE_IMPLEMENTATION_PLAN.md  COMPLETE_IMPROVEMENTS.md  COMPLETE_VERIFICATION_REPORT.md  CONFIGURATION.md  CONTINUE_FROM_HERE.md  CONTRIBUTING.md  DOCS_CONSOLIDATED.md  FEATURES.md  FINAL_GITHUB_SETUP.txt  FIXES_COMPLETE.md  FIXES_SUMMARY.txt  FULL_INTEGRATION_COMPLETE.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  IMPROVEMENTS_SUMMARY.md  LICENSE  MASTER_IMPLEMENTATION_ROADMAP.md  NATURAL_LANGUAGE_GUIDE.md  PROGRESS_SUMMARY_FULL.md  PROJECT_COMPLETE.md  PROJECT_INTEGRATION_SUMMARY.md  PUSH_TO_GITHUB.sh  QUICKSTART.md  README.md  README_OLD.md  REPO_SETUP.md  SESSION_DEC10_DIAGNOSIS.md  SESSION_SUMMARY_DEC10_AM.md  SPRINT1_COMPLETE.md  SPRINT1_PROGRESS.md  V3_IMPLEMENTATION_SUCCESS.md  WEBAPP_API.md  WEBAPP_FIXES.md  WEBAPP_GUIDE.md  (+63 more)
.github/: ✨-feature-request-.md  🐛-bug-report.md
.teamshell/: config.yml
agents/: architect_agent.py  enhanced_agent_wrapper.py  qa_engineer_agent.py  sentinel_agent.py  team_collaboration.py  universal_agent_interface.py
ai_dev_team/: gemini_agent.py  main.py  repl.py
archive/: CONTINUE_FROM_HERE.md  FIXED_PROPERLY.md  FIXED_SUMMARY.md  FOR_NEXT_COPILOT_SESSION.md  HOW_IT_WORKS.md  LOCAL_MODELS_GUIDE.md  LOCAL_MODELS_QUICK_START.txt  QUICKSTART_V2.txt  QUICK_REFERENCE.txt  README_FIXES.md  README_OLD.md  README_QUICK.md  README_V2.md  SESSION_DEC9_11PM.md  SIMPLE_START.md  SIMPLIFIED.txt  (+19 more)
(+91 files in other folders)
