[project]
name = "ai-dev-team"
version = "0.1.0"
description = "An extensible AI Development Team framework for your terminal."
requires-python = ">=3.9"
dependencies = [
    "questionary",
    "PyYAML",
]

[project.scripts]
team = "ai_dev_team.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
